<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DC Villanos</string>
    <string name="name">"Nombre: "</string>
    <string name="powers">"Poderes: "</string>
    <string name="joker">The Joker</string>
    <string name="name_joker">Jack Oswald White</string>
    <string name="powers_joker">Completamente impredecible, agente del caos, armas personalizadas, usa una toxina que provoca que las víctimas mueran de risa.</string>
    <string name="profile">"Perfil: "</string>
    <string name="profile_joker">The Joker, clown principe del crimen, archienemigo de Batman. Agente del caos conocido por sus maléficos planes, artilugios extravagantes y sonrisa insidiosa, ha causado a Batman más sufrimiento que cualquier otro villano que haya enfrentado. Su origen, nombre y verdaderas motivaciones son un misterio.</string>
    <string name="alleged_name">"Presunto Nombre: "</string>
    <string name="joker_quote">\"No hables como si fueras uno de ellos! No lo eres… aunque quisieras. Para ellos solo eres un fenómeno, como yo. Ellos te necesitan ahora, pero cuando no te necesiten mas, te patearán. Como a un leproso.\" - Christopher Nolan \"The Dark Knight\", 2008</string>
    <string name="record">Registro Super Villano</string>
    <string name="register">Registro</string>
    <string name="age">Edad</string>
    <string name="info">"Nombre: %s \nEdad: %.0f \nGénero: %s \nPoderes: %s"</string>
    <string name="genero">Género</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="intelligence">Inteligencia</string>
    <string name="unpredictability">Imprevisibilidad</string>
    <string name="speed">Super Velocidad</string>
</resources>